--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 <footer class="bg-dark  text-white  mt-5 p-4">
     <div class="container ">
         <div class="row  ">
-           <div class="col-sm  ">
+           <div class="col-5  ">
             <p class="h4">INTESLA</p>
             <div>
                 <i class="fa fa-thumb-tack" aria-hidden="true"></i>
@@ -269,22 +269,22 @@
                 <p class="d-inline-block">Informes@inteslaperu.com</p>
             </div>
            </div>
-           <div class="col-sm ">
+           <div class="col-5 ">
             <p class="h4 ">REDES SOCIALES</p>
             <div class="">
                 <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                <p class="d-inline-block">/Intesla</p>
+                <a href="https://www.facebook.com/InteslaPeru/" class="text-white">/Intesla</a>
             </div>
             <div class="">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
-                <p class="d-inline-block">/Intesla</p>
+                <a href="https://www.instagram.com/InteslaPeru/" class="text-white">/Intesla</a>
             </div>
             <div class="">
                 <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                <p class="d-inline-block">/Intesla</p>
+                <a href="https://www.youtube.com/channel/UCd1GajcYG9WTmyHbHw-7Wqw" class="text-white">/Intesla</a>
             </div>
            </div> 
-           <div class="col-sm ">
+           <div class="col-2.7 ">
             <p class="h4">AVISO LEGAL</p>
             <div>
                <i class="fa fa-chevron-right" aria-hidden="true"></i>
