Cambio de telefonos

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
      <ul class="navbar-nav ml-5">
          <li class="nav-item">
             <i class="fas fa-phone-square-alt"></i>
-            <span class="p-2 mr-5">0-56-620683</span>
+            <span class="p-2 mr-5">+51 923690145</span>
          <li class="nav-item">
             <i class="fas fa-phone-square-alt"></i>
-            <span class="p-2 mr-5">0-56-620683</span>
+            <span class="p-2 mr-5">+51 922243202</span>
          </li>
          <li class="nav-item">
             <i class="fas fa-envelope"></i>
