--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTESLA</title>
     <link rel="stylesheet" href="css/cajita.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
@@ -19,7 +20,7 @@
 <body>
 <!-- CABECERA -->
  <nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center bg-dark text-white ">
-     <ul class="navbar-nav ml-5">
+     <ul class="navbar-nav ml-5" >
          <li class="nav-item">
             <i class="fas fa-phone-square-alt"></i>
             <span class="p-2 mr-5">+51 923690145</span>
@@ -44,12 +45,12 @@
         </button>
       
        <div class="collapse  navbar-collapse " id="firstNavbar">
-          <ul class="navbar-nav ml-auto ">
-              <li class="nav-item"><a class="nav-link text-white"href="#">¿Quienes Somos?</a></li>
-              <li class="nav-item"><a class="nav-link text-white"href="cursos.html">Nuestros Cursos</a></li>
-              <li class="nav-item"><a class="nav-link text-white"href="servicios.html">Nuestros Servicios</a></li>
-              <li class="nav-item"><a class="nav-link text-white"href="proyectos.html">Nuestros Proyectos</a></li>
-              <li class="nav-item"><a class="nav-link text-white"href="contactanos.html">Contactenos</a></li>
+          <ul class="navbar-nav ml-auto " >
+              <li class="nav-item"><a class="nav-link text-white"href="#" atribute>¿Quienes Somos?</a></li>
+              <li class="nav-item"><a class="nav-link text-white"href="cursos.html" atribute>Nuestros Cursos</a></li>
+              <li class="nav-item"><a class="nav-link text-white"href="servicios.html" atribute>Nuestros Servicios</a></li>
+              <li class="nav-item"><a class="nav-link text-white"href="proyectos.html" atribute>Nuestros Proyectos</a></li>
+              <li class="nav-item"><a class="nav-link text-white"href="contactanos.html" atribute>Contactenos</a></li>
           </ul>
        </div>
     </div>
