--- a/proyectos.html
+++ b/proyectos.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, user-scalable-no, initial-scale-1, maximun-scale-1, minimun-scale-1">
+	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/cajita.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -44,11 +45,11 @@
 		 
 		   <div class="collapse  navbar-collapse " id="firstNavbar">
 			<ul class="navbar-nav ml-auto ">
-				<li class="nav-item"><a class="nav-link text-white"href="#">¿Quienes Somos?</a></li>
-				<li class="nav-item"><a class="nav-link text-white"href="cursos.html">Nuestros Cursos</a></li>
-				<li class="nav-item"><a class="nav-link text-white"href="servicios.html">Nuestros Servicios</a></li>
-				<li class="nav-item"><a class="nav-link text-white"href="proyectos.html">Nuestros Proyectos</a></li>
-				<li class="nav-item"><a class="nav-link text-white"href="contactanos.html">Contactenos</a></li>
+				<li class="nav-item"><a class="nav-link text-white"href="#" atribute>¿Quienes Somos?</a></li>
+				<li class="nav-item"><a class="nav-link text-white"href="cursos.html" atribute>Nuestros Cursos</a></li>
+				<li class="nav-item"><a class="nav-link text-white"href="servicios.html"atribute>Nuestros Servicios</a></li>
+				<li class="nav-item"><a class="nav-link text-white"href="proyectos.html"atribute>Nuestros Proyectos</a></li>
+				<li class="nav-item"><a class="nav-link text-white"href="contactanos.html"atribute>Contactenos</a></li>
 			</ul>
 		 </div>
 	   </div>
