--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@
             <p class="h4">INTESLA</p>
             <div>
                 <i class="fa fa-thumb-tack" aria-hidden="true"></i>
-                <p class="d-inline-block">Av San Martin 500</p>
+                <p class="d-inline-block">Av Sebastian Barranca Mzna Q LOTE 10 - ICA </p>
             </div>
             <div>
                 <i class="fa fa-phone-square" aria-hidden="true"></i>
 
-                <p class="d-inline-block">920062431</p>
+                <p class="d-inline-block">+51 923690145</p>
             </div>
             <div>
                 <i class="fa fa-envelope" aria-hidden="true"></i>
