Agregando seccion quienes somos

--- a/cursos.html
+++ b/cursos.html
@@ -39,7 +39,7 @@
 		 
 		   <div class="collapse  navbar-collapse " id="firstNavbar">
 			<ul class="navbar-nav ml-auto ">
-				<li class="nav-item"><a class="nav-link text-white"href="#" atribute>¿Quienes Somos?</a></li>
+				<li class="nav-item"><a class="nav-link text-white"href="quienesSomos.html" atribute>¿Quienes Somos?</a></li>
 				<li class="nav-item"><a class="nav-link text-white"href="cursos.html" atribute>Nuestros Cursos</a></li>
 				<li class="nav-item"><a class="nav-link text-white"href="servicios.html" atribute>Nuestros Servicios</a></li>
 				<li class="nav-item"><a class="nav-link text-white"href="proyectos.html" atribute>Nuestros Proyectos</a></li>
