--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
     <title>Document</title>
 </head>
 <body>
-    <!-- CABECERA -->
+
+      <!-- CABECERA -->
  <nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center bg-dark text-white ">
     <ul class="navbar-nav ml-5">
         <li class="nav-item">
@@ -48,38 +48,63 @@
       </div>
    </div>
 </nav>
-    <section class="form_wrap">
-        <section class="contact_info">
-        <section class="info_title">
-            <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10533.148074178453!2d-75.73274988864439!3d-14.063433473246516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9110e30387dabd09%3A0x9cfa62f76a9b3e0e!2sInterbank!5e0!3m2!1ses!2spe!4v1606967594662!5m2!1ses!2spe" frameborder="0"></iframe>
-        </section>
-        <section class="info_items">
-            <p class="texto"> informes@inteslaperu.com</p>
-            <p class="texto">+51 957 497 977</p>
-            <p class="texto">Calle Camanà Nº315 Ref.al lado de financiera Credi Inka</p>
-        </section>
-        </section>
-        <form action="enviar.php" method="post" class="form_contact">
-            <h2>Envia un mensaje</h2>
-            <div class="user_info">
-                <label for="names">Nombres</label>
-                <input type="text" id="names" name="nombre" required>
-
-                <label for="phone">Telefono/Celular</label>
-                <input type="text" id="phone" name="telefono">
-
-                <label for="email">Correo electronico</label>
-                <input type="text" id="email" name="correo" required>
-
-                <label for="mensaje">Mensaje</label>
-                <textarea name="mensaje" id="mensaje" required></textarea>
-                <input type="submit" value="Enviar Mensaje" id="btnSend">
+    <div class="container">
+        <section class="nosotros m-5">
+            <div class="empresa">
+                <p class="h1">Nuestra Empresa</p>
+                <p class="modulo">
+                    De nuestra mayor consideración:<br>
+                Nos es grato dirigirnos ante ustedes, con la finalidad de presentar a nuestra 
+                empresa INTESLA S.R.L. con RUC: 20604092729, Ubicados en calle Camaná 315 –
+                Ica. Incursionando en el mundo de la Industria, Agroindustria y Pesqueras, somos 
+                una empresa que tiene amplia experiencia en el rubro de la Obra Eléctrica, Diseño, 
+                Fabricación, Montaje e Instalación de tableros eléctricos. Con una filosofía basada 
+                en la sostenibilidad, calidad y la experiencia, promoviendo un modelo empresarial 
+                que busca anticipar y gestionar de forma responsable tanto los riesgos laborales 
+                y desafíos derivados del desarrollo sostenible, como las nuevas oportunidades 
+                que surge los mismos
+                </p>
             </div>
-        </form>
-    </section>
+            <div class="vision">
+                <p class="h1">Nuestra Visión</p>
+                <p class="modulo">
+                    Ser reconocidos como líderes en la actividad que desarrollamos y ofrecer servicios 
+                    con la más alta calidad e innovación, promoviendo el desarrollo profesional y 
+                    social de nuestros colaboradores respaldados por una gestión integral de mejora 
+                    continua.
+                </p>
+            </div>
+            <div class="mision">
+                <p class="h1">Nuestra Misión</p>
+                <p class="modulo">
+                    Brindar soluciones técnicas, viables y eficaces para satisfacer las necesidades de
+                    los diferentes sectores Industriales e Agroindustriales, teniendo como proyección 
+                    a los requerimientos y necesidades que nos presenten.
+                </p>
+            </div>
+            <div class="objetivo">
+                <p class="h1">Nuestro Objetivo</p>
+                <p class="modulo">
+                    Es cubrir todas las necesidades del cliente, a partir del desarrollo de Ingeniería, 
+                    diseño, fabricación, montaje y mantenimiento de las obras realizadas, con la 
+                    tecnología y controles requeridas basándonos en normas y especificaciones 
+                    técnicas.
+                    INTESLA S.R.L Está capacitada para proyectar y ejecutar trabajos de media y gran 
+                    envergadura a industrias de diversos sectores.
+                </p>
+            </div>
+            <p class="h1">Nos diferenciamos por :</p>               
+                    <div class="d-flex flex-wrap justify-content-between mt-5 mb-5 ">
+                        <img src="img/img1.jpg" alt="fondo Intesla" class="card w-25" >
+                        <img src="img/img2.jpg" alt="fondo Intesla" class="card w-25" >
+                         <img src="img/img3.jpg" alt="fondo Intesla" class="card w-25" >                
+                    </div>
 
-     <!-- PIE DE PAGINA -->
-<footer class="bg-dark  text-white  mt-5 p-4">
+                   
+        </section>
+    </div>
+    <!-- PIE DE PAGINA -->
+ <footer class="bg-dark  text-white  mt-5 p-4">
     <div class="container ">
         <div class="row  ">
            <div class="col-sm  ">
@@ -135,11 +160,8 @@
     </div>
     
 </footer>
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
