--- a/servicios.html
+++ b/servicios.html
@@ -113,7 +113,7 @@
                 <div class="text-center">
                     <i class="fa fa-thumb-tack fa-5x text-center w-50 " aria-hidden="true"></i>
                     </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque, neque, et sed turpis volutpat, 
+                <p>Lorem ipsum dolorr sit amet, consectetur adipiscing elit. Neque, neque, et sed turpis volutpat, 
                     condimentum pulvinar dictum.</p>
             </div>
         </div>    
