Agregando validacion del formulario y nueva direccion

--- a/index.html
+++ b/index.html
@@ -209,7 +209,13 @@
     <article>
         <div class="bg-primary text-white text-center p-5 font-weight-bold">
             <i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i>
-           <p class="h2 d-inline-block"> +51 920062431</p>
+           <p class="h2 d-inline-block">
+        
+           <a href="https://api.whatsapp.com/send?phone=51923690145&text=%F0%9F%98%80%C2%A1Hola!%0ANecesito%20informaci%C3%B3n%20y%20me%20gustar%C3%ADa%20comunicarme%20con%20ustedes.%0AGracias!!" target="_blank" class="botonwt" style="color: white;">
+            +51 923 690 145
+           </a>
+          </p>
+       
         </div>
     </article>
 
@@ -263,11 +269,17 @@
             <div>
                 <i class="fa fa-phone-square" aria-hidden="true"></i>
 
-                <p class="d-inline-block">+51 923690145</p>
+                <p class="d-inline-block">
+                  <a href="tel:+51923690145" class="icono2" style="color: white;">
+                    +51 923690145
+                </p>
             </div>
             <div>
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                <p class="d-inline-block">Informes@inteslaperu.com</p>
+                <p class="d-inline-block">
+                  <a href="mailto:informes@inteslaperu.com" class="icono2" style="color: white;">
+                    Informes@inteslaperu.com
+                </p>
             </div>
            </div>
            <div class="col-5 ">
