--- a/index.html
+++ b/index.html
@@ -170,31 +170,28 @@
         <div class="container">
             <div class="article2 m-5">
                 <i class="" ></i>
-                <h2 class="d-inline-block">NUESTROS SERVICIOS</h2>
+                <h2>NUESTROS SERVICIOS</h2>
             </div>  
+            <div class="container"></div>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vel pretium pretium et, quis mi dignissim et. Sagittis
                 dictum leo, faucibus pretium purus facilisis ut morbi sodales. Id tellus vitae amet, ipsum magna. Dignissim magna
                 vulputate turpis viverra amet. Malesuada nisl, arcu volutpat malesuada morbi sagittis id et. Ultricies tristique
                 interdum mi habitasse. Nisl quam vitae viverra amet. .</p>
 
-               <div class="card-deck">
-                <div class="card " style="width: 350px" >
-                    <img class="card-img-top" src="img/s2.jpg" alt="Servicios">
-                    <div class="card-body text-center">
-                      <a href="#" class="btn btn-primary">Ver mas</a>
-                    </div>
+               <div class="card-deck ">
+                <div class="card bg-primary  ">
+                    <img class="card-img-top " src="img/s2.jpg" alt="Servicios">
+                      <p class="h4 m-auto text-center text-white">Tableros Eléctricos</p>
+
                 </div>
-                <div class="card" style="width: 350px;">
+                <div class="card bg-primary" >
                     <img class="card-img-top" src="img/s2.jpg" alt="Servicios">
-                    <div class="card-body text-center">
-                      <a href="#" class="btn btn-primary">Ver mas</a>
-                    </div>
+                      <p class="h4 bg-primary m-auto text-center text-white">Instalaciones eléctricas</p>
                 </div>
-                <div class="card" style="width: 350px;">
+                <div class="card bg-primary" >
                     <img class="card-img-top" src="img/s2.jpg" alt="Servicios">
-                    <div class="card-body text-center">
-                      <a href="#" class="btn btn-primary">Ver mas</a>
-                    </div>
+                      <p class="h4 bg-primary m-auto text-center text-white">Automatización y control industrial</p>
+
                 </div>
                </div>
                <div class="text-center m-5" >
