Actualizando contactos y Servicios

--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
@@ -50,8 +51,9 @@
 </nav>
     <div class="container">
         <section class="nosotros m-5">
-            <div class="empresa">
+            <div class="empresa">            
                 <p class="h1">Nuestra Empresa</p>
+                <hr class="subrayado">
                 <p class="modulo">
                     De nuestra mayor consideración:<br>
                 Nos es grato dirigirnos ante ustedes, con la finalidad de presentar a nuestra 
@@ -65,8 +67,9 @@
                 que surge los mismos
                 </p>
             </div>
-            <div class="vision">
+            <div class="vision mt-5">
                 <p class="h1">Nuestra Visión</p>
+                <hr class="subrayado">
                 <p class="modulo">
                     Ser reconocidos como líderes en la actividad que desarrollamos y ofrecer servicios 
                     con la más alta calidad e innovación, promoviendo el desarrollo profesional y 
@@ -74,16 +77,18 @@
                     continua.
                 </p>
             </div>
-            <div class="mision">
+            <div class="mision mt-5">
                 <p class="h1">Nuestra Misión</p>
+                <hr class="subrayado">
                 <p class="modulo">
                     Brindar soluciones técnicas, viables y eficaces para satisfacer las necesidades de
                     los diferentes sectores Industriales e Agroindustriales, teniendo como proyección 
                     a los requerimientos y necesidades que nos presenten.
                 </p>
             </div>
-            <div class="objetivo">
+            <div class="objetivo mt-5">
                 <p class="h1">Nuestro Objetivo</p>
+                <hr class="subrayado">
                 <p class="modulo">
                     Es cubrir todas las necesidades del cliente, a partir del desarrollo de Ingeniería, 
                     diseño, fabricación, montaje y mantenimiento de las obras realizadas, con la 
@@ -93,13 +98,30 @@
                     envergadura a industrias de diversos sectores.
                 </p>
             </div>
-            <p class="h1">Nos diferenciamos por :</p>               
-                    <div class="d-flex flex-wrap justify-content-between mt-5 mb-5 ">
-                        <img src="img/img1.jpg" alt="fondo Intesla" class="card w-25" >
-                        <img src="img/img2.jpg" alt="fondo Intesla" class="card w-25" >
-                         <img src="img/img3.jpg" alt="fondo Intesla" class="card w-25" >                
+         <div class="objetivo mt-5">
+            <p class="h1">Nos diferenciamos por :</p>  
+            <hr class="subrayado">             
+                    <div class="d-flex  flex-wrap justify-content-around">
+                        <div class="direnciamos-item ">
+                            <div class="icono-diferenciamos"> 
+                                <i class="fas fa-shield-alt fa-9x " >  </i>
+                           </div>
+                            <p class="h3 text-center">Seguridad</p>
+                        </div>
+                        <div class="direnciamos-item " >
+                            <div class="icono-diferenciamos"> 
+                            <i class="fas fa-cogs fa-9x" ></i>
+                            </div>
+                            <p class="h3 text-center" icono-diferenciamos>Responsabilidad</p>
+                        </div>
+                        <div class="direnciamos-item">
+                            <div class="icono-diferenciamos">
+                               <i class="far fa-handshake fa-9x"></i>   
+                            </div>
+                            <p class="h3 text-center" icono-diferenciamos>Puntualidad</p>
+                        </div>                        
                     </div>
-
+         </div>
                    
         </section>
     </div>
