Agregando header con nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </head>
 <body>
 <!-- CABECERA -->
-<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center bg-dark text-white ">
+<div class="cabecera1">
+<nav class="navbar navbar-expand-sm bg-light  justify-content-center bg-dark text-white " >
+  
   <ul class="navbar-nav ml-5" >
       <li class="nav-item">
          <i class="fas fa-phone-square-alt"></i>
@@ -35,6 +37,7 @@
   </ul>
 
 </nav>
+
 <nav class="navbar navbar-expand-md navbar-light bg-primary">
 <div class="container">
 <a href="index.html" class="navbar-brand">
@@ -55,13 +58,13 @@
 </div>
 </div>
 </nav>
+</div>
 <!-- VIDEO -->
 <section>
     <article>
-        <div class="contenedor">
+        <div class="contenedor-video">
             <video src="img/video.mp4" autoplay class="video"></video>
-        </div>
-        
+        </div>    
     </article>
    <!-- #1 QUIENES SOMOS -->
     <article>
