--- a/cursos.html
+++ b/cursos.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/estilos.css">
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-    <title>Document</title>
+    <title>INTESLA</title>
 </head>
 <body>
     <div class="cabecera1">
@@ -54,11 +54,11 @@
         </div>
 <section>
     <article>
-		<div class="container d-flex justify-content-center ">
+		<div class="container d-flex justify-content-center  ">
 			<div>
-				<img src="img/laptop.jpg" class="w-100" alt="">
+				<img src="img/laptop.jpg" class="w-100 mt-5" alt="">
 			</div>
-        <div class="p-5 text-center text-white bg-dark">
+        <div class="p-5 text-center text-white bg-dark mt-5">
 			<h1 class="h1 text-center">PROXIMAMENTE</h1>
 		    <p class="h3 m-4">ESTAMOS TRABAJANDO EN NUESTROS CURSOS ONLINE</p>
 			<a href="index.html" class="btn btn-primary">Volver</a>
