--- a/proyectos.html
+++ b/proyectos.html
@@ -59,17 +59,17 @@
 		</nav>
 		</div>
    <!-- CARRUSEL DE IMAGENES -->
-   <div class="container">
+  <!--  <div class="container">
 	<div id="demo" class="carousel slide " data-ride="carousel" >
 
-		<!-- Indicators -->
+	
 		<ul class="carousel-indicators">
 		  <li data-target="#demo" data-slide-to="0" class="active"></li>
 		  <li data-target="#demo" data-slide-to="1"></li>
 		  <li data-target="#demo" data-slide-to="2"></li>
 		</ul>
 	  
-		<!-- The slideshow -->
+	
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
 			<img src="img/img3.jpg" alt="Los Angeles">
@@ -82,7 +82,6 @@
 		  </div>
 		</div>
 	  
-		<!-- Left and right controls -->
 		<a class="carousel-control-prev" href="#demo" data-slide="prev">
 		  <span class="carousel-control-prev-icon"></span>
 		</a>
@@ -92,11 +91,11 @@
 	  
 	  </div>
 </div>
-
-    <div class="container">
+ -->
+    <!-- <div class="container">
 		<h1 class="title mt-5 text-success"> Nuestros Proyectos </h1>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus soluta porro dolores nam doloremque quam esse deserunt quas eos mollitia.</p>
-	</div>
+	</div> -->
 	
 
 	<section class="portafolio">
@@ -154,10 +153,11 @@
 					<p class="pro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium numquam fuga ad quo ea unde saepe modi, doloremque eveniet consectetur vero blanditiis velit corporis necessitatibus error quas exercitationem aut commodi.</p>    
 				</section>   
 			</section>    
-
+ 
 		</div>
    
 	</section>
+	
 <!-- PIE DE PAGINA -->
 <footer class="bg-dark  text-white  mt-5 p-4 ">
 	<div class="container d-flex flex-wrap justify-content-between ">
