--- a/contactanos.html
+++ b/contactanos.html
@@ -45,7 +45,7 @@
                <li class="nav-item"><a class="nav-link text-white"href="cursos.html" atribute>Nuestros Cursos</a></li>
                <li class="nav-item"><a class="nav-link text-white"href="servicios.html" atribute>Nuestros Servicios</a></li>
                <li class="nav-item"><a class="nav-link text-white"href="proyectos.html" atribute>Nuestros Proyectos</a></li>
-               <li class="nav-item"><a class="nav-link text-white"href="contactanos.html" atribute>Contactenos</a></li>
+               <li class="nav-item"><a class="nav-link text-white"href="contactanos.html" atribute>Contáctanos</a></li>
            </ul>
         </div>
         </div>
