--- a/cursos.html
+++ b/cursos.html
@@ -60,7 +60,7 @@
 			</div>
         <div class="p-5 text-center text-white bg-dark mt-5">
 			<h1 class="h1 text-center">PROXIMAMENTE</h1>
-		    <p class="h3 m-4">ESTAMOS TRABAJANDO EN NUESTROS CURSOS ONLINE</p>
+		    <p class="h3 m-4">ESTAMOS TRABAJANDO EN NUESTRA PLATAFORMA</p>
 			<a href="index.html" class="btn btn-primary">Volver</a>
 		</div>   
 	</div>   
