--- a/proyectos.html
+++ b/proyectos.html
@@ -133,7 +133,7 @@
 			<section class="portafolio-articulo">
 				<img class="iman" src="img/img2.jpg" alt="">
 				<section class="portafolio-texto">
-					<h2 class="sub">lorem ipsum</h2>
+					<h2 class="sub">Lorem ipsum</h2>
 					<p class="pro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium numquam fuga ad quo ea unde saepe modi, doloremque eveniet consectetur vero blanditiis velit corporis necessitatibus error quas exercitationem aut commodi.</p>    
 				</section>   
 			</section> 
