--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <i class="fas fa-rocket"></i>
           <span class="h4">FILOSOFÍA</span>
           <p class="card-text">En Intesla  nos mueve una filosofía de formación INTEGRAL tanto
-               en las habilidades técnicas como en los valores y actitudes del ser humano.</p>
+               en las habilidades técnicas como en los valores y actitudes del ser humano</p>
         </div>
         <div class="qS-item">
           <i class="fas fa-smile"></i>
@@ -101,7 +101,7 @@
           <i class="fas fa-tools"></i>
           <span class="h4 ">ACREDITACION</span>
           <p class="card-text">Los títulos de todos nuestros programas de Formación Inicial cuentan
-           con el reconocimiento oficial del Estado mediante la acreditación del INA.</p>   
+           con el reconocimiento oficial del Estado mediante la acreditación del ina.</p>   
         </div>
 
      </div>
