--- a/proyectos.html
+++ b/proyectos.html
@@ -12,14 +12,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-	<style>.carousel-inner img {
-        width: 100%;
-        height: 100%;
-      }</style>
+
 </head>
 <body >
 	<div class="cabecera1">
-		<nav class=" navbar-expand-sm bg-dark text-white " >
+		<nav class=" navbar-expand-sm  text-white " nav1 >
 		  
 		  <ul class="navbar-nav " >
 					 
@@ -35,7 +32,7 @@
 						 </li>
 						 <li class="nav-item" >
 							<i class="fas fa-envelope" ></i>
-							<span class="p-2 mr-5">informes@inteslaperu.com</span>
+							<span class="p-2 mr-5"> informes@inteslaperu.com</span>
 						 </li>
 					   </div>
 					  <div class="header-redesSociales">
@@ -57,7 +54,7 @@
 		
 		</nav>
 		
-		<nav class="navbar navbar-expand-md navbar-light bg-primary">
+		<nav class="navbar navbar-expand-md navbar-light " nav1>
 		<div class="container">
 		<a href="index.html" class="navbar-brand">
 			<img src="img/logo.png" class="w-50" alt="">
@@ -68,16 +65,17 @@
 		
 		<div class="collapse  navbar-collapse " id="firstNavbar">
 		   <ul class="navbar-nav ml-auto ">
-			   <li class="nav-item"><a class="nav-link text-white"href="quienesSomos.html" atribute>¿Quiénes Somos?</a></li>
-			   <li class="nav-item"><a class="nav-link text-white"href="#" atribute>Nuestros Cursos</a></li>
-			   <li class="nav-item"><a class="nav-link text-white"href="servicios.html" atribute>Nuestros Servicios</a></li>
-			   <li class="nav-item"><a class="nav-link text-white"href="proyectos.html" atribute>Nuestros Proyectos</a></li>
-			   <li class="nav-item"><a class="nav-link text-white"href="contactanos.html" atribute>Contáctanos</a></li>
+			   <li class="nav-item"><a class="nav-link text-white"href="quienesSomos.html" atribute>NOSOTROS </a></li>
+			   <li class="nav-item"><a class="nav-link text-white"href="#" atribute>CURSOS </a></li>
+			   <li class="nav-item"><a class="nav-link text-white"href="servicios.html" atribute>SERVICIOS </a></li>
+			   <li class="nav-item"><a class="nav-link text-white"href="proyectos.html" atribute>PROYECTOS </a></li>
+			   <li class="nav-item"><a class="nav-link text-white"href="contactanos.html" atribute>CONTÁCTANOS</a></li>
 		   </ul>
 		</div>
 		</div>
 		</nav>
 		</div>
+	  
         <section class="nuestros-proyectos">
 			<h1>NUESTROS PROYECTOS</h1>
 			<hr class="subra">
@@ -140,8 +138,8 @@
 
 
 <!-- PIE DE PAGINA -->
-<footer class="bg-dark  text-white  mt-5 p-4 ">
-	<div class="container d-flex flex-wrap justify-content-between ">
+<footer class="  text-white  mt-5 p-4 " footer>
+	<div class="container d-flex flex-wrap justify-content-between">
   
 		<div class="w-30" >
 		<img src="img/logo.png" alt="logo" class="logi w-50">
@@ -155,7 +153,6 @@
 		</div>
 		<div>
 		  <i class="fa fa-phone-square" aria-hidden="true"></i>
-  
 		  <p class="d-inline-block">
 			<a href="tel:+51923690145" class="icono2" style="color: white;">
 			+51 923690145
