--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
           <div class="titulo-video">
             <p class="titulo-intesla">Bienvenido a Intesla</p>
            </div>
-            <video src="img/video.mp4" autoplay class="video"></video>
+
+           <video class="video"  poster="img/img1.jpg" loop autoplay>
+            <source src="img/video.mp4" type="video/mp4" >
+           </video>
+           
         </div>    
     </article>
    <!-- #1 QUIENES SOMOS -->
@@ -332,7 +336,7 @@
         </p>
       </div>
        </div>
-       <div class=" ">
+       <div class="redesociales">
       <p class="h4">REDES SOCIALES</p>
       <div class="">
         <i class="fa fa-facebook-square" aria-hidden="true"></i>
