--- a/videos.html
+++ b/videos.html
@@ -93,7 +93,7 @@
 		  </p>
 		</div>
 		 </div>
-		 <div class=" ">
+		 <div class="redesociales ">
 		<p class="h4">REDES SOCIALES</p>
 		<div class="">
 		  <i class="fa fa-facebook-square" aria-hidden="true"></i>
