--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
 		 </nav>
 		</div>
 	
-	  <section class="nuestros-proyectos">
+	  <section class="nuestros-proyectos mt-5">
 		<h1>NUESTROS VIDEOS</h1>
 		<hr class="subra">
 		 <div class="nuestros-proyectos-contenedor">
